Bug 406748 - Buttons are cut off while drkonqi generates a backtrace
Summary: Buttons are cut off while drkonqi generates a backtrace
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.15.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-21 22:20 UTC by Patrick Silva
Modified: 2019-06-11 10:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.1
Sentry Crash Report:


Attachments
screenshot (27.52 KB, image/png)
2019-04-21 22:20 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-04-21 22:20:24 UTC
Created attachment 119549 [details]
screenshot

SUMMARY
Observe the buttons highlighted in red in the attached screenshot.
They are cut off.

STEPS TO REPRODUCE
1. when a crash notification appears on your system, click its "Report bug" button
to open drkonqi 
2. click "Developer information" tab
3. observe the buttons immediately below the text box
while the backtrace is generated

EXPECTED RESULT
The buttons are not cut off

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.2
Comment 1 Harald Sitter 2019-06-11 10:33:00 UTC
Git commit bf5d10ab09461516cd5230c6dc12ec67e074c15d by Harald Sitter.
Committed on 11/06/2019 at 10:32.
Pushed by sitter into branch 'Plasma/5.16'.

use even more resizing

Summary:
since the widget by default has no strings in the designer ui file any
state change injects stuff in qlabels and changes the effective size hint.
to deal with this once and for all the three state changes now always
call a new adjustment helper.
the adjustment helper calls adjustSize iff the hintted dimensions are
larger than the effective one. this way we don't shrink the window
when the backtrace is reloaded, but always grow it if needed for the
backtraced state.

CHANGELOG: The Developer Information tab now correctly resizes to fit the content
FIXED-IN: 5.16.1
BUGL 403408

Test Plan:
- no cut off widgets when going to dev info tab while bt is generated
- neither when the bt is loaded
- doesn't shrink when clicking reload

Reviewers: mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21642

M  +22   -4    src/backtracewidget.cpp
M  +1    -0    src/backtracewidget.h

https://commits.kde.org/drkonqi/bf5d10ab09461516cd5230c6dc12ec67e074c15d