src/backtracewidget.h
@@ -58,6 +58,7 @@ private:
     DebugPackageInstaller * m_debugPackageInstaller = nullptr;
 
     void setAsLoading();
+    void adjustWindowSize();
 
 private Q_SLOTS:
     void loadData();
